Cria a parte 1 do livro e reorganiza capitulos iniciais

--- a/01_capitulo.qmd
+++ b/01_capitulo.qmd
@@ -65,6 +65,49 @@ recurso central que condiciona inovação, eficiência e poder econômico
 
 ## Big Data e a explosão do volume de dados
 
+![Capa da revista @economist2010 sobre o dilúvio de dados.](img/01-cap/deluge.jpg){#fig-data-deluge
+  fig-alt="Capa da revista The Economist com o título 'The Data Deluge'."
+  fig-cap="Capa da revista *The Economist* que popularizou a expressão
+  “The Data Deluge” (o dilúvio de dados), frequentemente citada como um
+  marco na discussão sobre a explosão do volume de dados e seus impactos
+  econômicos e gerenciais."
+  fig-align="center"
+  width="70%"
+}
+
+A matéria *The Data Deluge*, publicada pela *The Economist* 
+[@economist2010], marcou um ponto de inflexão na forma como 
+economistas, gestores e formuladores de políticas passaram a enxergar 
+os dados na economia contemporânea. O texto parte da
+constatação de que o mundo entrou em uma era caracterizada por uma produção
+de dados sem precedentes, impulsionada pela digitalização de processos,
+pela popularização da internet, pelo uso massivo de dispositivos móveis
+e pela automação de atividades econômicas e sociais.
+
+O artigo destaca que o crescimento do volume de dados não é apenas
+quantitativo, mas também qualitativo: empresas e governos passaram a
+registrar transações, comportamentos e interações em níveis de detalhe
+antes inimagináveis. Esse fenômeno transforma dados em um ativo econômico
+estratégico, comparável a recursos tradicionais como capital e trabalho,
+mas com características próprias, como alta reutilização e forte
+dependência de capacidades analíticas.
+
+A *The Economist* enfatiza que o verdadeiro desafio não reside na coleta
+dos dados, mas em sua **organização, análise e interpretação**. Grandes
+volumes de dados, por si só, não geram conhecimento nem vantagem
+competitiva. Somente quando combinados com métodos estatísticos,
+computacionais e analíticos adequados é que os dados podem apoiar decisões
+gerenciais mais informadas, melhorar previsões e revelar padrões
+econômicos relevantes.
+
+Por fim, a matéria alerta para os riscos associados à “ilusão dos dados”:
+quanto maior o volume de informações disponíveis, maior também a
+probabilidade de erros, correlações espúrias e interpretações equivocadas.
+Nesse contexto, competências analíticas sólidas tornam-se essenciais para
+administradores, economistas e profissionais das ciências sociais
+aplicadas, que passam a lidar com um ambiente decisório cada vez mais
+orientado por dados.
+
 O crescimento exponencial da produção de dados levou ao surgimento do conceito
 de *Big Data*, frequentemente caracterizado pelos chamados *cinco Vs*: volume,
 velocidade, variedade, veracidade e valor. Esses atributos ajudam a
@@ -79,7 +122,7 @@ associados ao seu processamento e uso.
 knitr::include_graphics("img/01-cap/5vbigdata.png")
 ```
 
-Esse aumento no volume e na complexidade dos dados tornou inviável o uso
+Esse aumento no volume e na complexidade dos dados tornou insuficiente o uso
 exclusivo de ferramentas tradicionais, como planilhas eletrônicas, e criou a
 necessidade de métodos, linguagens e infraestruturas mais robustas para
 análise. Não por acaso, publicações de referência na área de negócios
@@ -172,187 +215,22 @@ Esse modelo destaca que projetos de dados raramente seguem um caminho linear.
 surgem ou que hipóteses iniciais precisem ser revistas.
 
 
+## Da Ciência de Dados aos profissionais que a tornam possível
 
-## Papéis profissionais na área de dados
+Ao longo deste capítulo, vimos como a chamada *economia de dados* se
+consolidou historicamente e por que a explosão no volume e na complexidade
+das informações tornou necessária uma abordagem estruturada, hoje conhecida
+como Ciência de Dados. Também discutimos que gerar valor a partir de dados
+exige mais do que tecnologia: requer métodos, organização e capacidade de
+transformar informação em decisão.
 
-O crescimento da área de dados deu origem a diferentes papéis profissionais,
-que variam conforme o foco técnico, o grau de especialização e a posição no
-fluxo de produção de valor a partir dos dados. Entre os papéis mais comuns
-estão o Analista de Dados, o Cientista de Dados e o Engenheiro de Dados.
+Na prática, esse trabalho não é realizado por um único tipo de profissional.
+Projetos orientados por dados envolvem funções distintas, com responsabilidades
+e competências complementares. No próximo capítulo, apresentamos os principais
+papéis profissionais na área de dados — Analista de Dados, Cientista de Dados e
+Engenheiro de Dados — e discutimos como eles se relacionam com problemas reais
+de Administração e áreas afins.
 
-Embora essas funções sejam conceitualmente distintas, na prática,
-especialmente em organizações de pequeno e médio porte, é comum que um mesmo
-profissional acumule responsabilidades associadas a mais de um papel. Essa
-sobreposição é particularmente relevante no contexto brasileiro e deve ser
-levada em conta ao interpretar descrições formais de cargos.
-
-Nas subseções a seguir, apresentam-se esses papéis de forma sintética,
-destacando habilidades técnicas, competências analíticas e exemplos típicos
-de aplicação.
-
-
-### Analista de Dados {.unnumbered}
-
-O Analista de Dados atua principalmente na exploração, organização e
-interpretação de dados, com foco em apoiar decisões operacionais e táticas
-por meio de análises descritivas e diagnósticas.
-
-**Habilidades técnicas**
-
-- Domínio de ferramentas de visualização de dados, como Power BI ou Tableau,
-  e conhecimento avançado em planilhas eletrônicas, como o MS Excel.
-
-- Proficiência em linguagens de programação voltadas à análise de dados,
-  especialmente R e/ou Python.
-
-- Experiência prática, ainda que em nível introdutório, com bancos de dados
-  e linguagem SQL.
-
-**Habilidades analíticas**
-
-- Capacidade de realizar análises estatísticas básicas e interpretar grandes
-  volumes de dados para identificar padrões, tendências e anomalias.
-
-**Exemplos de aplicações práticas**
-
-- Análise de dados em setores como finanças, saúde e turismo, com o objetivo
-  de gerar insights para melhoria de processos, gestão de recursos e
-  atendimento ao cliente.
-
-- Elaboração de análises **descritivas** e **diagnósticas**: a análise
-  descritiva busca compreender *o que* ocorreu, enquanto a análise
-  diagnóstica procura explicar *por que* ocorreu.
-
-
-### Cientista de Dados (Iniciante) {.unnumbered}
-
-O Cientista de Dados atua de forma mais aprofundada na modelagem e na
-construção de soluções analíticas, combinando estatística, programação e
-conhecimento do problema de negócio. No nível iniciante, esse papel ainda
-envolve forte aprendizado técnico e conceitual.
-
-**Habilidades técnicas**
-
-- Proficiência em linguagens de programação como R e/ou Python, com uso de
-  bibliotecas especializadas (por exemplo, tidyverse, pandas,
-  scikit-learn, tidymodels).
-
-- Conhecimento em SQL e em bancos de dados relacionais e não relacionais.
-
-- Familiaridade com ferramentas de versionamento de código (Git) e ambientes
-  de desenvolvimento.
-
-**Habilidades analíticas**
-
-- Conhecimentos em estatística aplicada e aprendizagem de máquina.
-
-- Capacidade de preparar, transformar e organizar conjuntos de dados para
-  análise e modelagem.
-
-- Capacidade de implementar algoritmos básicos de aprendizagem de máquina
-  sob supervisão ou em projetos de escopo limitado.
-
-**Exemplos de aplicações práticas**
-
-- Desenvolvimento de modelos de classificação e regressão para problemas
-  como previsão, segmentação de clientes e detecção de anomalias.
-
-- Realização de análises **preditivas** e **prescritivas**, utilizando dados
-  históricos para antecipar comportamentos e apoiar recomendações de ação.
-
-- Criação de provas de conceito (POCs) para validação de hipóteses de negócio
-  baseadas em dados.
-
-- Comunicação de resultados técnicos em formato acessível a públicos não
-  técnicos.
-
-
-### Engenheiro de Dados {.unnumbered}
-
-O Engenheiro de Dados é o profissional responsável pela construção e
-manutenção da infraestrutura que permite o armazenamento, o processamento e
-o acesso eficiente aos dados utilizados pelas equipes analíticas.
-
-- Atua no projeto, desenvolvimento e otimização de *pipelines* de dados,
-  *data warehouses* e *data lakes*.
-
-- Seu foco principal é garantir que os dados sejam confiáveis, consistentes,
-  acessíveis e escaláveis, servindo como base para o trabalho de analistas e
-  cientistas de dados.
-
-- Em geral, esse papel envolve menor ênfase em análises estatísticas e maior
-  concentração em aspectos de arquitetura, desempenho e integração de
-  sistemas.
-
-
-
-
-## Áreas de aplicação
-
-As aplicações da Ciência de Dados são amplas e afetam diretamente o cotidiano
-das organizações. Em finanças, destacam-se análises de risco de crédito,
-detecção de fraudes e gestão de investimentos. Em marketing, técnicas de
-segmentação de clientes, análise de sentimentos e monitoramento de mídias
-sociais são amplamente utilizadas.
-
-Esses exemplos ilustram como dados podem ser usados para compreender o
-passado, explicar causas e antecipar cenários futuros, correspondendo às
-análises descritivas, diagnósticas e preditivas.
-
-
-
-## Habilidades interpessoais e analíticas
-
-Além de competências técnicas, profissionais de dados precisam desenvolver
-habilidades interpessoais e analíticas que permitam transformar resultados
-quantitativos em decisões organizacionais concretas. Essas habilidades são
-essenciais para conectar análises de dados a problemas reais de negócio e
-para comunicar resultados de forma eficaz a diferentes públicos.
-
-- **Pensamento analítico**: Abordar problemas de forma estruturada,
-  formular perguntas relevantes, selecionar informações apropriadas e
-  buscar soluções baseadas em evidências.
-
-- **Conhecimento do negócio**: Compreender os objetivos da organização,
-  o contexto do mercado e a forma como análises de dados se relacionam com
-  metas estratégicas e operacionais.
-
-- **Comunicação oral e escrita**: Capacidade de explicar resultados
-  técnicos a pessoas sem formação técnica, utilizando linguagem clara,
-  exemplos práticos e evitando jargões desnecessários.
-
-- **Pensamento crítico**: Questionar suposições implícitas, avaliar a
-  qualidade e as limitações dos dados disponíveis e considerar
-  interpretações alternativas antes de chegar a conclusões.
-
-- **Contar histórias com dados**: Organizar resultados e indicadores de modo a
-  construir uma narrativa coerente, capaz de destacar os principais
-  insights e apoiar processos de tomada de decisão.
-
-- **Trabalho em equipe**: Colaborar com profissionais de diferentes áreas,
-  compreender necessidades diversas e integrar perspectivas técnicas e
-  organizacionais.
-
-- **Gerenciamento de projetos**: Planejar etapas de trabalho, definir
-  prioridades, estabelecer prazos realistas e comunicar o andamento das
-  atividades às partes interessadas.
-
-- **Adaptabilidade**: Lidar com mudanças de requisitos, ferramentas e
-  tecnologias em um campo caracterizado por rápida evolução.
-
-- **Curiosidade intelectual**: Demonstrar interesse contínuo em aprender,
-  formular novas perguntas e explorar dados de forma sistemática e
-  responsável.
-
-
-::: {.callout-tip}
-
-Na prática profissional em Ciência de Dados, a capacidade de **estruturar problemas**, **compreender o contexto do negócio** e **comunicar resultados** de forma
-clara tende a ser mais determinante do que o domínio isolado de ferramentas.
-As habilidades técnicas adquirem valor quando integradas a essas
-competências centrais.
-
-:::
 
 
 
