--- a/referencias.bib
+++ b/referencias.bib
@@ -79,6 +79,17 @@
 }
 
 
+@misc{economist2010,
+  title        = {The Data Deluge},
+  author       = {{The Economist}},
+  year         = {2010},
+  month        = feb,
+  day          = {27},
+  url          = {https://www.economist.com/weeklyedition/2010-02-27},
+  urldate      = {2026-01-21}
+}
+
+
 @misc{economist2017,
   title        = {The World's Most Valuable Resource},
   author       = {{The Economist}},
